# curso_ROS_UNIFEI

./: README.md  git_clone.txt  mobilesim_0.7.3+ubuntu12+gcc4.6_amd64.deb
Exercícios/aula3/: CMakeLists.txt  package.xml
Exercícios/aula3/src/: emissor.cpp  receptor.cpp
Exercícios/aula4/: CMakeLists.txt  package.xml
Exercícios/aula4/include/: Node.h
Exercícios/aula4/include/aula4/: EmissorNode.h  ReceptorNode.h
Exercícios/aula4/launch/: aula4.launch
Exercícios/aula4/src/: emissor_node.cpp  receptor_node.cpp
Exercícios/aula4/src/aula4/: EmissorNode.cpp  ReceptorNode.cpp
Exercícios/aula5/: CMakeLists.txt  package.xml
Exercícios/aula5/include/aula5/: EmissorNode.h  ReceptorNode.h
Exercícios/aula5/include/aula5/distancias/: DistanciaConverter.h  DistanciaEnum.h
Exercícios/aula5/launch/: aula5.launch  rosaria.launch
Exercícios/aula5/src/: Node.cpp  emissor_node.cpp  receptor_node.cpp
Exercícios/aula5/src/aula5/: EmissorNode.cpp  ReceptorNode.cpp
Exercícios/aula5/src/aula5/distancias/: DistanciaConverter.cpp
Exercícios/aula5_msgs/: CMakeLists.txt  package.xml
Exercícios/aula5_msgs/msg/: Robo.msg
Exercícios/aula6/: CMakeLists.txt  package.xml
Exercícios/aula6/include/: EnumConverter.h
Exercícios/aula6/include/aula6/: FuzzyControllerNode.h
Exercícios/aula6/launch/: aula6.launch
Exercícios/aula6/src/: fuzzy_controller_node.cpp
Exercícios/aula6/src/aula6/: FuzzyControllerNode.cpp
Exercícios/eca419_exercicio01/: CMakeLists.txt  atualizar_dados.csv  dados.csv  eca419_exercicio01.dia  eca419_exercicio01.eps
Exercícios/eca419_exercicio01/include/eca419/exercicio01/: CNH.h  CPF.h  Documento.h  DocumentoIdentificador.h  EnumConversor.h  Headers.h  Pessoa.h  RG.h  TituloDeEleitor.h
Exercícios/eca419_exercicio01/include/eca419/exercicio01/sexos/: SexoConversor.h  SexoEnum.h
Exercícios/eca419_exercicio01/include/helpers/: CSVParser.h  PersonFactory.h  System.h
Exercícios/eca419_exercicio01/src/: main.cpp  test.cpp
Exercícios/eca419_exercicio01/src/eca419/exercicio01/: CNH.cpp  CPF.cpp  Documento.cpp  DocumentoIdentificador.cpp  Pessoa.cpp  RG.cpp  TituloDeEleitor.cpp
Exercícios/eca419_exercicio01/src/eca419/exercicio01/sexos/: SexoConversor.cpp
Exercícios/eca419_exercicio01/src/helpers/: CSVParser.cpp  PersonFactory.cpp  System.cpp
Material/: aula02_exe.dia  aula02_exe.eps  trabalhoROS.txt
Material/mapas/: Map2.map  map.pgm  map.yaml
gran_finale/login_manager/: CMakeLists.txt  package.xml
gran_finale/login_manager/include/login_manager/: LoginManagerNode.h  Robot.h
gran_finale/login_manager/msg/: Beacon.msg
gran_finale/login_manager/src/: LoginManagerNode.cpp  Robot.cpp  login_manager_node.cpp
gran_finale/rosaria_motion/: CMakeLists.txt  package.xml
gran_finale/rosaria_motion/include/rosaria_motion/: RosariaMotionNode.h
gran_finale/rosaria_motion/launch/: rosaria_motion.launch  rosaria_motion_group.launch
gran_finale/rosaria_motion/src/: RosariaMotionNode.cpp  rosaria_motion_client_node.cpp
rosaria_motion_0/: CMakeLists.txt  package.xml
rosaria_motion_0/include/rosaria_motion/: RosariaMotionNode.h
rosaria_motion_0/src/: RosariaMotionNode.cpp  rosaria_motion_client_node.cpp  rosaria_motion_node.cpp
rosaria_motion_1/: CMakeLists.txt  package.xml
rosaria_motion_1/include/rosaria_motion/: RosariaMotionNode.h
rosaria_motion_1/launch/: rosaria_motion.launch
rosaria_motion_1/src/: RosariaMotionNode.cpp  rosaria_motion_client_node.cpp
rosaria_motion_1/srv/: SetVelocity.srv
rosaria_motion_2/: CMakeLists.txt  package.xml
rosaria_motion_2/include/rosaria_motion/: RosariaMotionNode.h
rosaria_motion_2/src/: RosariaMotionNode.cpp  rosaria_motion_node.cpp
rosaria_motion_final/: CMakeLists.txt
rosaria_motion_final/include/rosaria_motion/: RosariaMotionNode.h
rosaria_motion_final/src/: RosariaMotionNode.cpp  rosaria_motion_client_node.cpp  rosaria_motion_node.cpp
