<?xml version="1.0"?>
<package>

	<name>rosaria_motion</name>
	<version>1.0.0</version>
	<description>The rosaria_motion package</description>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
	<license>TODO</license>
	 <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>roscpp</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>

	<export>
	</export>

</package>
