<?xml version="1.0"?>
<package>
  <name>aula4</name>
  <version>1.0.0</version>
  <description>The aula4 package</description>

  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
  <maintainer email="eca419.unifei@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
