<?xml version="1.0"?>
<package>
  <name>aula5_msgs</name>
  <version>0.1.0</version>
  <description>The aula5_msgs package</description>

  <maintainer email="eca419.unifei@gmail.com">Expertinos UNIFEI</maintainer>
  <license>Apache 2.0</license>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrrique Rossette Leite</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
